--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_APP_ID="AC02A9E5-7E0F-4BB5-B928-2644D7A3D491"
-VITE_AI_AGENT_ID="1bc6a04a-8277-40c4-a263-a279663b4948"
+VITE_APP_ID="xxx"
+VITE_AI_AGENT_ID="xxx"
 
-VITE_USER_ID=Chan00
-VITE_USER_ACCESS_TOKEN=cb514f18c8e79be48be9bb27bd894db26976762e
+VITE_USER_ID=xxx
+VITE_USER_ACCESS_TOKEN=xxx
